compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__recursion__shadowing_so_not_recursive.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/recursion.rs
assertion_line: 54
expression: "\npub fn map(map) {\n  map()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn map(map) {
  map()
}


----- COMPILED JAVASCRIPT
export function map(map) {
  return map();
}
