compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__recursion__tco.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/recursion.rs
assertion_line: 5
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> main(x - 1)\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> main(x - 1)
  }
}


----- COMPILED JAVASCRIPT
export function main(loop$x) {
  while (true) {
    let x = loop$x;
    if (x === 0) {
      return undefined;
    } else {
      loop$x = x - 1;
    }
  }
}
