compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__recursion__tco_case_block.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/recursion.rs
assertion_line: 19
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> {\n      let y = x\n      main(y - 1)\n    }\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> {
      let y = x
      main(y - 1)
    }
  }
}


----- COMPILED JAVASCRIPT
export function main(loop$x) {
  while (true) {
    let x = loop$x;
    if (x === 0) {
      return undefined;
    } else {
      let y = x;
      loop$x = y - 1;
    }
  }
}
